--- a/_posts/2020-10-11-mz.md
+++ b/_posts/2020-10-11-mz.md
@@ -1,10 +1,12 @@
 ---
 layout: post
-title:  "Welcome to MZ!"
+title:  "Медиазона Израиль"
 ---
 
-# Welcome
+# ДАЙТЕ ДЕНЕГ
+# [DONATE.ZONA.MEDIA](https://donate.zona.media)
 
-**Hello world**, this is my first Jekyll blog post.
 
-I hope you like it!
+![media-zona](https://i.imgur.com/HDiT7Jh.png)
+
+
